--- a/src/Makefile
+++ b/src/Makefile
@@ -86,6 +86,8 @@ cpu: $(CPU_OBJ) $(CPU_MTX_OBJ) $(CPU_PRJ_OBJ)
 gpu: $(OBJDIR)/pogs_link.o $(GPU_OBJ) $(GPU_MTX_OBJ) $(GPU_PRJ_OBJ)
 	ar cr $(OBJDIR)/pogs.a $^
 
+shared: $(CPU_OBJ) $(CPU_MTX_OBJ) $(CPU_PRJ_OBJ)
+	$(CXX) -shared -Wl,-soname,pogs.so.1 -o $(OBJDIR)/pogs.so.1.0 $^
 
 # Directories
 $(OBJDIR):
@@ -93,28 +95,28 @@ $(OBJDIR):
 
 # Directories CPU
 $(OBJDIR)/cpu: $(OBJDIR)
-	mkdir -p $@ 
+	mkdir -p $@
 
 $(OBJDIR)/cpu/matrix: $(OBJDIR)/cpu
-	mkdir -p $@ 
+	mkdir -p $@
 
 $(OBJDIR)/cpu/projector: $(OBJDIR)/cpu
-	mkdir -p $@ 
+	mkdir -p $@
 
 # Directories GPU
 $(OBJDIR)/gpu: $(OBJDIR)
-	mkdir -p $@ 
+	mkdir -p $@
 
 $(OBJDIR)/gpu/matrix: $(OBJDIR)/gpu
-	mkdir -p $@ 
+	mkdir -p $@
 
 $(OBJDIR)/gpu/projector: $(OBJDIR)/gpu
-	mkdir -p $@ 
+	mkdir -p $@
 
 
 # POGS CPU objects
 $(OBJDIR)/cpu/pogs.o: cpu/pogs.cpp $(POGS_HDR) $(GSL_HDR) | $(OBJDIR)/cpu
-	$(CXX) -I include -Icpu/include $< $(CXXFLAGS) -c -o $@ 
+	$(CXX) -I include -Icpu/include $< $(CXXFLAGS) -c -o $@
 
 $(OBJDIR)/cpu/matrix/%.o: %.cpp $(CPU_HDR) | $(OBJDIR)/cpu/matrix
 	$(CXX) -Iinclude -Icpu/include $< $(CXXFLAGS) $(IFLAGS) -c -o $@
@@ -127,10 +129,10 @@ $(OBJDIR)/cpu/%.o: %.cpp $(CPU_HDR) | $(OBJDIR)/cpu
 
 # POGS GPU objects
 $(OBJDIR)/pogs_link.o: $(GPU_OBJ) $(GPU_MTX_OBJ) $(GPU_PRJ_OBJ) | $(OBJDIR)
-	$(CUXX) $(CUFLAGS) $^ -dlink -o $@ 
+	$(CUXX) $(CUFLAGS) $^ -dlink -o $@
 
 $(OBJDIR)/gpu/pogs.o: gpu/pogs.cu $(POGS_HDR) $(CML_HDR) | $(OBJDIR)/gpu
-	$(CUXX) -Iinclude -Igpu/include $< $(CUFLAGS) -dc -o $@ 
+	$(CUXX) -Iinclude -Igpu/include $< $(CUFLAGS) -dc -o $@
 
 $(OBJDIR)/gpu/matrix/%.o: %.cu $(GPU_HDR) | $(OBJDIR)/gpu/matrix
 	$(CUXX) -Iinclude -Igpu/include $< $(CUFLAGS) $(IFLAGS) -dc -o $@
@@ -143,4 +145,3 @@ $(OBJDIR)/gpu/%.o: %.cu $(GPU_HDR) | $(OBJDIR)/gpu
 
 clean:
 	rm -rf pogs.a build/ *.dSYM
-
